--- a/content/extra/.htaccess
+++ b/content/extra/.htaccess
@@ -16,3 +16,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^(.+)$ $1.html [L,QSA]
 
+ErrorDocument 404 /404.html
+ErrorDocument 403 /403.html
