Add old url formats to .htaccess

--- a/content/extra/.htaccess
+++ b/content/extra/.htaccess
@@ -1,6 +1,215 @@
 Options +FollowSymLinks -Indexes 
 RewriteEngine On
 
+# Rewrite ancient dud urls to new format
+
+RewriteRule ^methods/42/(.*) /posts/in-situ-hybridisation-to-alpha-satellite-sequences [R=301,L]
+RewriteRule ^methods/1535/(.*) /posts/install-haiku-under-mac-os-x-with-virtualbox [R=301,L]
+RewriteRule ^methods/1511/(.*) /posts/purification-of-anti-peptide-antibody [R=301,L]
+RewriteRule ^methods/1341/(.*) /posts/pm-buffer [R=301,L]
+RewriteRule ^methods/13/(.*) /posts/primary-monocyte-differentiation-dcs-gm-csfil-4 [R=301,L]
+RewriteRule ^methods/1418/(.*) /posts/2x-rapid-ligation-buffer [R=301,L]
+RewriteRule ^methods/27/(.*) /posts/carnoys-fluid-fixation [R=301,L]
+RewriteRule ^methods/1509/(.*) /posts/microtubule-spindowns-from-extracts [R=301,L]
+RewriteRule ^methods/1456/(.*) /posts/8-paraformaldehyde-for-immunofluorescence [R=301,L]
+RewriteRule ^methods/1433/(.*) /posts/embryo-4d-microscopy-mounting [R=301,L]
+RewriteRule ^methods/1503/(.*) /posts/execute-last-command-as-root [R=301,L]
+RewriteRule ^methods/1442/(.*) /posts/chemiluminescent-detection [R=301,L]
+RewriteRule ^methods/34/(.*) /posts/ethanol-fixation-for-flow-cytometry [R=301,L]
+RewriteRule ^methods/1368/(.*) /posts/05-m-na2co3 [R=301,L]
+RewriteRule ^methods/1358/(.*) /posts/100-mm-mggtp [R=301,L]
+RewriteRule ^methods/1534/(.*) /posts/find-all-files-containing-a-given-string [R=301,L]
+RewriteRule ^methods/1361/(.*) /posts/36-mm-brefeldin-a [R=301,L]
+RewriteRule ^methods/1539/(.*) /posts/speed-up-matlab-on-macos-x [R=301,L]
+RewriteRule ^methods/1340/(.*) /posts/mounting-media [R=301,L]
+RewriteRule ^methods/1516/(.*) /posts/get-file-type-information-from-the-command-line [R=301,L]
+RewriteRule ^methods/51/(.*) /posts/retroviral-infection-of-phks [R=301,L]
+RewriteRule ^methods/1394/(.*) /posts/heparan-sulfate-chain-analysis [R=301,L]
+RewriteRule ^methods/1353/(.*) /posts/05-m-edta [R=301,L]
+RewriteRule ^methods/1497/(.*) /posts/use-gnome-looking-glass-for-debugging [R=301,L]
+RewriteRule ^methods/21/(.*) /posts/10x-tris-buffer [R=301,L]
+RewriteRule ^methods/1463/(.*) /posts/x-gal-overlay-assay-for-yeast-plates [R=301,L]
+RewriteRule ^methods/1356/(.*) /posts/1-m-kcl-stock [R=301,L]
+RewriteRule ^methods/1354/(.*) /posts/05-m-egta-stock [R=301,L]
+RewriteRule ^methods/1347/(.*) /posts/homogenization-buffer [R=301,L]
+RewriteRule ^methods/1499/(.*) /posts/csf-extract-prep-for-spindle-assembly [R=301,L]
+RewriteRule ^methods/38/(.*) /posts/dapi-counterstain-adherent-cellssections [R=301,L]
+RewriteRule ^methods/1518/(.*) /posts/get-a-list-of-all-processes-not-run-by-you [R=301,L]
+RewriteRule ^methods/1538/(.*) /posts/using-email-to-sms-gateways-to-send-free-sms [R=301,L]
+RewriteRule ^methods/1496/(.*) /posts/debug-gnome-shell [R=301,L]
+RewriteRule ^methods/1513/(.*) /posts/piping-between-shells [R=301,L]
+RewriteRule ^methods/48/(.*) /posts/brdu-incorporation-for-raft-cultures [R=301,L]
+RewriteRule ^methods/1379/(.*) /posts/determining-dna-concentrations-for-ligations [R=301,L]
+RewriteRule ^methods/120/(.*) /posts/dna-extraction-from-agarose-gels-dialysis-tubing [R=301,L]
+RewriteRule ^methods/50/(.*) /posts/collagen-gel-containing-3t3-fibroblasts [R=301,L]
+RewriteRule ^methods/1344/(.*) /posts/isolation-buffer [R=301,L]
+RewriteRule ^methods/1357/(.*) /posts/10-m-naoh [R=301,L]
+RewriteRule ^methods/1383/(.*) /posts/lacritin-stimulated-cell-proliferation-assay [R=301,L]
+RewriteRule ^methods/1427/(.*) /posts/bacterial-mediated-rnai [R=301,L]
+RewriteRule ^methods/45/(.*) /posts/transformation-of-plasmid-dna-to-e-coli [R=301,L]
+RewriteRule ^methods/1507/(.*) /posts/use-ifconfigme-to-return-your-ip-and-host [R=301,L]
+RewriteRule ^methods/1460/(.*) /posts/measuring-dna-contour-lengths-with-imagej [R=301,L]
+RewriteRule ^methods/1387/(.*) /posts/transformation-of-xli-blue-mrf-competent-cells [R=301,L]
+RewriteRule ^methods/1512/(.*) /posts/fixingpelleting-chromatin-for-immunofluorescence [R=301,L]
+RewriteRule ^methods/9/(.*) /posts/b-cell-enrichment-via-dynabeads [R=301,L]
+RewriteRule ^methods/41/(.*) /posts/apes-treatment-of-slides [R=301,L]
+RewriteRule ^methods/1419/(.*) /posts/5x-long-pcr-buffer [R=301,L]
+RewriteRule ^methods/1362/(.*) /posts/30-x-naf [R=301,L]
+RewriteRule ^methods/1424/(.*) /posts/ems-mutagenesis [R=301,L]
+RewriteRule ^methods/1525/(.*) /posts/syntax-highlighting-with-django-and-markdown [R=301,L]
+RewriteRule ^methods/1372/(.*) /posts/lacritin-ip3-assay [R=301,L]
+RewriteRule ^methods/1447/(.*) /posts/immunohistochemistry-cultured-cellsmonolayers [R=301,L]
+RewriteRule ^methods/1437/(.*) /posts/c-elegans-single-worm-pcr [R=301,L]
+RewriteRule ^methods/1360/(.*) /posts/5-m-nacl [R=301,L]
+RewriteRule ^methods/1359/(.*) /posts/100-mm-mgatp-stock [R=301,L]
+RewriteRule ^methods/1457/(.*) /posts/haemotoxylin-and-eosin-staining [R=301,L]
+RewriteRule ^methods/1471/(.*) /posts/show-warning-in-prompt-when-shell-loses-directory [R=301,L]
+RewriteRule ^methods/1438/(.*) /posts/plc-buffer-for-immunoprecipitation [R=301,L]
+RewriteRule ^methods/1531/(.*) /posts/display-external-rss-feeds-on-your-wordpress-blog [R=301,L]
+RewriteRule ^methods/35/(.*) /posts/formaldehyde-fixation-for-flow-cytometry [R=301,L]
+RewriteRule ^methods/1523/(.*) /posts/remove-duplicate-lines-from-text-files-with-sort [R=301,L]
+RewriteRule ^methods/1514/(.*) /posts/find-all-running-processes-of-a-program [R=301,L]
+RewriteRule ^methods/1454/(.*) /posts/sodium-citrate-buffer [R=301,L]
+RewriteRule ^methods/1339/(.*) /posts/pbs-5x-in-500-mls [R=301,L]
+RewriteRule ^methods/43/(.*) /posts/retrovirus-titration [R=301,L]
+RewriteRule ^methods/1384/(.*) /posts/tear-collection-method [R=301,L]
+RewriteRule ^methods/1346/(.*) /posts/10-x-column-buffer [R=301,L]
+RewriteRule ^methods/30/(.*) /posts/neutral-buffered-formalin-fixation [R=301,L]
+RewriteRule ^methods/1421/(.*) /posts/01-m-glycine-hcl-ph-27 [R=301,L]
+RewriteRule ^methods/1367/(.*) /posts/3-m-ki [R=301,L]
+RewriteRule ^methods/1469/(.*) /posts/silica-suspension-for-plasmid-recovery [R=301,L]
+RewriteRule ^methods/1439/(.*) /posts/c-elegans-immunoprecipitation [R=301,L]
+RewriteRule ^methods/1342/(.*) /posts/valap [R=301,L]
+RewriteRule ^methods/25/(.*) /posts/acetic-alcohol-fixation [R=301,L]
+RewriteRule ^methods/1495/(.*) /posts/6x-dna-loading-buffer-for-agarose [R=301,L]
+RewriteRule ^methods/1449/(.*) /posts/cresyl-violet-staining-nissl-staining [R=301,L]
+RewriteRule ^methods/1515/(.*) /posts/reload-bash_profile-without-logging-out [R=301,L]
+RewriteRule ^methods/1431/(.*) /posts/t-a-cloning-vectors [R=301,L]
+RewriteRule ^methods/1472/(.*) /posts/add-git-branch-name-to-terminal-prompt-mac [R=301,L]
+RewriteRule ^methods/1466/(.*) /posts/using-a-gel-doc-system [R=301,L]
+RewriteRule ^methods/1364/(.*) /posts/30-mm-mg-gtp-g-s [R=301,L]
+RewriteRule ^methods/29/(.*) /posts/hellys-fluid-fixation [R=301,L]
+RewriteRule ^methods/1537/(.*) /posts/customize-directory-colors [R=301,L]
+RewriteRule ^methods/1493/(.*) /posts/cell-culture-freezing-media [R=301,L]
+RewriteRule ^methods/1458/(.*) /posts/neuron-recovery-of-neurobiotinbiocytin-cells [R=301,L]
+RewriteRule ^methods/1532/(.*) /posts/highlight-authors-comments-on-wordpress-blog [R=301,L]
+RewriteRule ^methods/1465/(.*) /posts/lb-agar-plates [R=301,L]
+RewriteRule ^methods/1371/(.*) /posts/cell-adhesion [R=301,L]
+RewriteRule ^methods/33/(.*) /posts/zenkers-fluid-fixation [R=301,L]
+RewriteRule ^methods/1430/(.*) /posts/c-elegans-total-genomic-dna-preparation [R=301,L]
+RewriteRule ^methods/1389/(.*) /posts/excision-of-clones-as-pbluescript-from-lzapii [R=301,L]
+RewriteRule ^methods/17/(.*) /posts/metabolite-extraction-from-supernatant-cells [R=301,L]
+RewriteRule ^methods/18/(.*) /posts/100mm-tris-buffer [R=301,L]
+RewriteRule ^methods/1335/(.*) /posts/isolation-of-ldl-from-human-plasma [R=301,L]
+RewriteRule ^methods/16/(.*) /posts/generic-quantitative-sandwich-elisa [R=301,L]
+RewriteRule ^methods/1470/(.*) /posts/setup-android-development-with-eclipse-on-mac [R=301,L]
+RewriteRule ^methods/1432/(.*) /posts/cosmid-low-copy-plasmid-prep [R=301,L]
+RewriteRule ^methods/1462/(.*) /posts/dot-blot-analysis-with-imagej [R=301,L]
+RewriteRule ^methods/1349/(.*) /posts/pbs-1x-in-1l [R=301,L]
+RewriteRule ^methods/1529/(.*) /posts/change-the-desktop-directory-on-linux [R=301,L]
+RewriteRule ^methods/1440/(.*) /posts/transformation-of-frozen-saccharomyces-cerevisiae [R=301,L]
+RewriteRule ^methods/23/(.*) /posts/preparation-for-microdissection-polyester [R=301,L]
+RewriteRule ^methods/1510/(.*) /posts/testing-rabbit-bleeds-by-elisa [R=301,L]
+RewriteRule ^methods/1390/(.*) /posts/rotary-shadowing [R=301,L]
+RewriteRule ^methods/1533/(.*) /posts/django-ajax-threaded-comments-using-only-jquery [R=301,L]
+RewriteRule ^methods/1386/(.*) /posts/preparation-of-competent-xli-blue-mrf-cells [R=301,L]
+RewriteRule ^methods/39/(.*) /posts/cells-in-suspension [R=301,L]
+RewriteRule ^methods/1429/(.*) /posts/frozen-yeast-competent-cells [R=301,L]
+RewriteRule ^methods/1343/(.*) /posts/20-x-energy-regeneration-system [R=301,L]
+RewriteRule ^methods/1453/(.*) /posts/mowiol-aqueous-mounting-media [R=301,L]
+RewriteRule ^methods/1425/(.*) /posts/tmp-uv-integration [R=301,L]
+RewriteRule ^methods/1455/(.*) /posts/chrome-alum-gelatin-slide-coating [R=301,L]
+RewriteRule ^methods/1422/(.*) /posts/c-elegans-embryo-staining [R=301,L]
+RewriteRule ^methods/1444/(.*) /posts/purification-of-6x-his-proteins [R=301,L]
+RewriteRule ^methods/1501/(.*) /posts/hss-depletion-conditions-for-xkcm1 [R=301,L]
+RewriteRule ^methods/1464/(.*) /posts/dna-extraction-chelex [R=301,L]
+RewriteRule ^methods/1504/(.*) /posts/automatic-unzipuntar-using-correct-tool [R=301,L]
+RewriteRule ^methods/12/(.*) /posts/differentiation-to-m1m2-macrophages-gm-csfm-csf [R=301,L]
+RewriteRule ^methods/1336/(.*) /posts/extracting-cholesterol-and-lipids-from-cells [R=301,L]
+RewriteRule ^methods/1527/(.*) /posts/installing-google-earth-on-ubuntu [R=301,L]
+RewriteRule ^methods/11/(.*) /posts/hl-60-differentiation-to-neutrophilsmonocytes [R=301,L]
+RewriteRule ^methods/1385/(.*) /posts/preparation-of-sonicated-salmon-sperm-dna [R=301,L]
+RewriteRule ^methods/1378/(.*) /posts/phosphatase-removal-of-po4-groups-from-dna [R=301,L]
+RewriteRule ^methods/1441/(.*) /posts/c-elegans-microinjection [R=301,L]
+RewriteRule ^methods/20/(.*) /posts/10-ammonium-persulphate-solution [R=301,L]
+RewriteRule ^methods/1528/(.*) /posts/collaborate-in-the-shell-with-screen-multiuser [R=301,L]
+RewriteRule ^methods/1375/(.*) /posts/agarose-gel-electrophoresis [R=301,L]
+RewriteRule ^methods/1468/(.*) /posts/initialize-git-repository-from-local-files [R=301,L]
+RewriteRule ^methods/26/(.*) /posts/bouins-fluid-fixation [R=301,L]
+RewriteRule ^methods/1435/(.*) /posts/colloidal-coomassie-blue-solution [R=301,L]
+RewriteRule ^methods/1490/(.*) /posts/install-homebrew-package-manager-for-mac [R=301,L]
+RewriteRule ^methods/1366/(.*) /posts/100-mm-sodium-orthovanadate [R=301,L]
+RewriteRule ^methods/1392/(.*) /posts/lacritin-calcium-signaling-assay [R=301,L]
+RewriteRule ^methods/1355/(.*) /posts/1m-dithiothreitol-dtt [R=301,L]
+RewriteRule ^methods/1519/(.*) /posts/use-bash-brace-expansion-to-save-hoursdays [R=301,L]
+RewriteRule ^methods/1491/(.*) /posts/control-r-through-your-history [R=301,L]
+RewriteRule ^methods/1522/(.*) /posts/control-console-with-sysreq [R=301,L]
+RewriteRule ^methods/1428/(.*) /posts/m9-plates-leu [R=301,L]
+RewriteRule ^methods/1459/(.*) /posts/nickel-dab-n-dab-labeling [R=301,L]
+RewriteRule ^methods/1377/(.*) /posts/dna-fragment-isolation [R=301,L]
+RewriteRule ^methods/1502/(.*) /posts/in-gel-tryptic-digest-for-protein-id-by-ms [R=301,L]
+RewriteRule ^methods/10/(.*) /posts/restoration-from-dmso-cryopreservation [R=301,L]
+RewriteRule ^methods/1420/(.*) /posts/antibody-purification-using-blotted-antigen [R=301,L]
+RewriteRule ^methods/1536/(.*) /posts/control-memcached-from-the-command-line [R=301,L]
+RewriteRule ^methods/31/(.*) /posts/michels-fixative-for-immunofluorescence [R=301,L]
+RewriteRule ^methods/14/(.*) /posts/macs-cd14-separation-of-monocytes [R=301,L]
+RewriteRule ^methods/1434/(.*) /posts/embryo-4d-micro-zeiss-axioplan-2-axiovision-45 [R=301,L]
+RewriteRule ^methods/1517/(.*) /posts/install-cinnamon-on-ubuntu-1204 [R=301,L]
+RewriteRule ^methods/1363/(.*) /posts/30-x-alcl3 [R=301,L]
+RewriteRule ^methods/19/(.*) /posts/5x-western-blot-loading-buffer [R=301,L]
+RewriteRule ^methods/1467/(.*) /posts/pcr-product-clean-up-sapexo [R=301,L]
+RewriteRule ^methods/28/(.*) /posts/formol-sublimate-fixation [R=301,L]
+RewriteRule ^methods/49/(.*) /posts/organotypic-raft-culture-of-phks [R=301,L]
+RewriteRule ^methods/1446/(.*) /posts/tissue-preparation-for-vibratome-sectioning [R=301,L]
+RewriteRule ^methods/1351/(.*) /posts/1-m-hepes-ph-70 [R=301,L]
+RewriteRule ^methods/1450/(.*) /posts/cresyl-violet-staining-nissl-staining [R=301,L]
+RewriteRule ^methods/119/(.*) /posts/dna-extraction-from-agarose-gels-spin-column [R=301,L]
+RewriteRule ^methods/1374/(.*) /posts/immunostaining-of-paraffin-sections [R=301,L]
+RewriteRule ^methods/24/(.*) /posts/proteinase-k-treatment [R=301,L]
+RewriteRule ^methods/1452/(.*) /posts/dewaxing-paraffin-sections [R=301,L]
+RewriteRule ^methods/1524/(.*) /posts/django-threaded-comments [R=301,L]
+RewriteRule ^methods/1369/(.*) /posts/l-b-broth [R=301,L]
+RewriteRule ^methods/1436/(.*) /posts/colloidal-coomassie-blue-stain [R=301,L]
+RewriteRule ^methods/1506/(.*) /posts/quickly-serve-a-folder-via-web-server [R=301,L]
+RewriteRule ^methods/1350/(.*) /posts/1m-mgso4 [R=301,L]
+RewriteRule ^methods/1448/(.*) /posts/immunohistochemistry-with-tsa [R=301,L]
+RewriteRule ^methods/1498/(.*) /posts/dna-extraction-from-cheek-cells [R=301,L]
+RewriteRule ^methods/1376/(.*) /posts/dna-ligation [R=301,L]
+RewriteRule ^methods/1530/(.*) /posts/kill-unresponsive-applications-on-linux [R=301,L]
+RewriteRule ^methods/1505/(.*) /posts/find-top-404-error-pages-apache [R=301,L]
+RewriteRule ^methods/22/(.*) /posts/preparation-for-microdissection-paraffinfrozen [R=301,L]
+RewriteRule ^methods/1426/(.*) /posts/silica-based-plasmid-miniprep-vacuum-manifold [R=301,L]
+RewriteRule ^methods/47/(.*) /posts/raft-culture-media [R=301,L]
+RewriteRule ^methods/40/(.*) /posts/chromosome-fish [R=301,L]
+RewriteRule ^methods/1451/(.*) /posts/luxol-fast-blue-staining [R=301,L]
+RewriteRule ^methods/32/(.*) /posts/fixation-with-paraformaldehyde [R=301,L]
+RewriteRule ^methods/1393/(.*) /posts/heparanase-western-blotting [R=301,L]
+RewriteRule ^methods/1338/(.*) /posts/phem-500-mls-2x [R=301,L]
+RewriteRule ^methods/46/(.*) /posts/pcr-mutagenesis [R=301,L]
+RewriteRule ^methods/1526/(.*) /posts/bash-command-substitution [R=301,L]
+RewriteRule ^methods/1337/(.*) /posts/50-mm-tris-ph-80-10-mm-edta [R=301,L]
+RewriteRule ^methods/37/(.*) /posts/measuring-cell-fluorescence-using-imagej [R=301,L]
+RewriteRule ^methods/1423/(.*) /posts/rna-isolation-trizol-method [R=301,L]
+RewriteRule ^methods/1345/(.*) /posts/high-salt-buffer [R=301,L]
+RewriteRule ^methods/1352/(.*) /posts/1-m-pipes-ph-69 [R=301,L]
+RewriteRule ^methods/1500/(.*) /posts/crude-depletion-conditions-for-xkcm1 [R=301,L]
+RewriteRule ^methods/1388/(.*) /posts/endotoxin-assay [R=301,L]
+RewriteRule ^methods/1381/(.*) /posts/lacritin-pkca-signaling-assay [R=301,L]
+RewriteRule ^methods/1373/(.*) /posts/immunostaining-of-cells-adherent-to-coverslips [R=301,L]
+RewriteRule ^methods/1473/(.*) /posts/use-screen-to-manage-persistent-sessions [R=301,L]
+RewriteRule ^methods/1508/(.*) /posts/set-cdpath-to-ease-folder-navigation [R=301,L]
+RewriteRule ^methods/1492/(.*) /posts/re-execute-command-line-with [R=301,L]
+RewriteRule ^methods/1494/(.*) /posts/antibody-diluent-for-ihc [R=301,L]
+RewriteRule ^methods/44/(.*) /posts/bacterial-colony-screening-by-pcr [R=301,L]
+RewriteRule ^methods/1/(.*) /posts/immunohistochemistry [R=301,L]
+RewriteRule ^methods/15/(.*) /posts/silaneacetone-silanized-slides [R=301,L]
+RewriteRule ^methods/1443/(.*) /posts/zymolyase-plasmid-recovery-from-yeast [R=301,L]
+RewriteRule ^methods/121/(.*) /posts/dna-extraction-from-agarose-gels-paper-strip [R=301,L]
+RewriteRule ^methods/1445/(.*) /posts/animal-trans-cardial-perfusion-technique [R=301,L]
+RewriteRule ^methods/1348/(.*) /posts/pmg-buffer [R=301,L]
+RewriteRule ^methods/1365/(.*) /posts/150-mm-mg-amp-pnp [R=301,L]
+
+
 # Rewrite old urls to new format
 RewriteRule ^(methods|applications)/(\d+)/(.*)$ /posts/$3 [R=permanent,L]
 
