Add additional .htaccess rules for detected errors (Google WMT)

--- a/content/extra/.htaccess
+++ b/content/extra/.htaccess
@@ -341,3 +341,65 @@ RewriteRule ^article/pmg-buffer http://theolb.readthedocs.org/en/latest/misc/pmg
 RewriteRule ^methods/1365/(.*) http://theolb.readthedocs.org/en/latest/misc/150-mm-mg-amp-pnp.html [R=301,L]
 RewriteRule ^article/150-mm-mg-amp-pnp http://theolb.readthedocs.org/en/latest/misc/150-mm-mg-amp-pnp.html [R=301,L]
 
+# Additional errors from Webmaster tools
+
+RewriteRule ^articles(.*) / [R=301,L]
+RewriteRule ^category/biochemistry(.*) / [R=301,L]
+RewriteRule ^category/bioinformatics(.*) /category/code/ [R=301,L]
+RewriteRule ^category/cell-biology(.*) / [R=301,L]
+RewriteRule ^category/computing(.*) / [R=301,L]
+RewriteRule ^category/conferences(.*) / [R=301,L]
+RewriteRule ^category/histology(.*) / [R=301,L]
+RewriteRule ^category/imaging(.*) / [R=301,L]
+RewriteRule ^category/immunology(.*) / [R=301,L]
+RewriteRule ^category/misc(.*) / [R=301,L]
+RewriteRule ^category/model-organisms(.*) / [R=301,L]
+RewriteRule ^category/molecular-biology(.*) / [R=301,L]
+RewriteRule ^category/video(.*) /category/courses/ [R=301,L]
+RewriteRule ^category/web%20dev(.*) /category/web-dev/ [R=301,L]
+RewriteRule ^contact(.*) / [R=301,L]
+RewriteRule ^cv/www.ncbi.nlm.nih.gov/pubmed/23348753(.*) /cv/ [R=301,L]
+RewriteRule ^cv/www.ncbi.nlm.nih.gov/pubmed/23460124(.*) /cv/ [R=301,L]
+RewriteRule ^feeds/cdeboever3.github.io(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^feeds/d3(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^feeds/graphpad-prism(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^feeds/metabohunter(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^feeds/metapath-github(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^feeds/nmrglue(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^feeds/scientific-workflows-wiki(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^feeds/taverna(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^feeds/www.igm.life.ku.dk(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^feeds/www.models.life.ku.dk(.*) /feeds/all.atom.xml [R=301,L]
+RewriteRule ^images/software/wooey/plot_some_numbers_(.*) / [R=301,L]
+RewriteRule ^index(.*) / [R=301,L]
+RewriteRule ^index4(.*) /index4.html [R=301,L]
+RewriteRule ^indexindex2(.*) /index2.html [R=301,L]
+RewriteRule ^indexindex3(.*) /index3.html [R=301,L]
+RewriteRule ^indexindex4(.*) /index4.html [R=301,L]
+RewriteRule ^indexindex5(.*) /index5.html [R=301,L]
+RewriteRule ^indexindex6(.*) /index6.html [R=301,L]
+RewriteRule ^indexindex7(.*) /index7.html [R=301,L]
+RewriteRule ^indexindex8(.*) /index8.html [R=301,L]
+RewriteRule ^indexindex9(.*) /index9.html [R=301,L]
+RewriteRule ^list-of-email-ke-sms-gateway(.*) /list-of-email-to-sms-gateways/ [R=301,L]
+RewriteRule ^list-of-email-to-s.m.s-gateways(.*) /list-of-email-to-sms-gateways/ [R=301,L]
+RewriteRule ^list-of-email-to-sms-gateways/5(.*) /list-of-email-to-sms-gateways/ [R=301,L]
+RewriteRule ^m(.*) /tag/mobile/ [R=301,L]
+RewriteRule ^mobile(.*) /tag/mobile/ [R=301,L]
+RewriteRule ^notebooks(.*) /category/notebooks/ [R=301,L]
+RewriteRule ^publications(.*) /category/publications/ [R=301,L]
+RewriteRule ^software(.*) /category/apps/ [R=301,L]
+RewriteRule ^tag/afm(.*) / [R=301,L]
+RewriteRule ^tag/automation(.*) / [R=301,L]
+RewriteRule ^tag/biocytin(.*) / [R=301,L]
+RewriteRule ^tag/buffer(.*) / [R=301,L]
+RewriteRule ^tag/cd14(.*) / [R=301,L]
+RewriteRule ^tag/dab(.*) / [R=301,L]
+RewriteRule ^tag/embryo(.*) / [R=301,L]
+RewriteRule ^tag/glycine(.*) / [R=301,L]
+RewriteRule ^tag/immunohistochemistry(.*) / [R=301,L]
+RewriteRule ^tag/lacrimal(.*) / [R=301,L]
+RewriteRule ^tag/media(.*) / [R=301,L]
+RewriteRule ^tag/pascal(.*) / [R=301,L]
+RewriteRule ^tag/qtipy(.*) / [R=301,L]
+RewriteRule ^tag/xli-blue(.*) / [R=301,L]
